hphp/hack/test/typecheck/nothing/invoke_on_nothing.php.new_exhaustivity.exp
ERROR: File "invoke_on_nothing.php", line 15, characters 5-45:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "invoke_on_nothing.php", line 15, characters 13-14:
  The scrutinee has type `string` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
ERROR: File "invoke_on_nothing.php", line 15, characters 37-42:
Invalid return type (Typing[4110])
  File "invoke_on_nothing.php", line 14, characters 32-50:
  Expected `Awaitable<vec<int>>`
  File "invoke_on_nothing.php", line 15, characters 37-42:
  But got `vec<int>`
